added keywords and other f1000 editorial comments

--- a/manuscript/f1000_submission/f1000research.latex
+++ b/manuscript/f1000_submission/f1000research.latex
@@ -38,6 +38,13 @@ $abstract$
 
 \end{abstract}
 
+$if(keywords)$
+\textbf{Keywords:}
+$for(keyword)$
+$keywords.keyword$;
+$endfor$
+$endif$
+
 \clearpage
 
 $body$
