--- a/manuscript/f1000_submission/manuscript.Rmd
+++ b/manuscript/f1000_submission/manuscript.Rmd
@@ -26,6 +26,12 @@ fontsize: 11pt
 linenumbers: yes
 bibliography: manuscript.bib
 spacing: doublespacing
+keywords:
+-  keyword: Harmful Algal Blooms
+-  keyword: Cyanotoxins
+-  keyword: National Lakes Assessment
+-  keyword: Conditional Probability Analysis
+-  keyword: Cyanobacteria
 abstract: "Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins. To help protect against these impacts, several health advisory levels have been set for some toxins. In particular, one of the more common toxins, microcystin-LR, has several advisory levels set for drinking water and recreational use. However, compared to other water quality measures, field measurements of microcystin-LR are not commonly available due to cost and advanced understanding required to interpret results. Addressing these issues will take time and resources. Thus, there is utility in finding indicators of microcystin-LR that are already widely available, can be estimated quickly and in situ, and used as a first defense against high concentrations of microcystin-LR. Chlorophyll *a* is commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin-LR. In this paper, we use this association to provide estimates of chlorophyll *a* concentrations that are indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR. Using the 2007 National Lakes Assessment and a conditional probability approach, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin-LR health advisory level. We look at the recent US EPA health advisories for drinking water as well as the World Health Organization levels for drinking water and recreational use and identify a range of chlorophyll *a* thresholds. A 50% chance of exceeding one of the specific advisory microcystin-LR concentrations of 0.3, 1, 1.6, and 2 g/L is associatied with chlorophyll *a* concentration thresholds of 24.64, 65.6, 89.71, and 94.93, respectively. When managing for these various microcystin-LR levels, exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action."
 ---
 
@@ -226,11 +232,11 @@ In this paper we build on past efforts and utilize the National Lakes Assessment
 
 ##Data
 
-We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(data.frame(nla_dat$CHLA,nla_dat$MCYST_TL_UGL)))` lakes.  
+We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(data.frame(nla_dat$CHLA,nla_dat$MCYST_TL_UGL)))` lakes.  These data are available for download from the [National Lake Assessment Data Site](http://www.epa.gov/national-aquatic-resource-surveys/data-national-aquatic-resource-surveys)  
 
 ##Analytical Methods
 
-We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin-LR health advisory levels [@paul2011probability].  Many health advisory levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)`% of lakes sampled had a concentration greater than 10 $\mu$g/L.  Thus, for this analysis we focused on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational).
+We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin-LR health advisory levels [@paul2011probability].  Many health advisory levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)`% of lakes sampled had a concentration greater than 10 $\mu$g/L.  Thus, for this analysis we focused on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational) [ @usepa2015drinking; @world2003cyanobacterial; @chorus1999toxic].
 
 
 Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisories changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin-LR health advisory levels.  We also calculated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identfiy the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  Using the upper confidence limit to identify a threshold is justified as it ensures that a given threshold is unlikely to miss a microcystin exceedance.
@@ -244,7 +250,7 @@ Lastly, we assess the ability of these chlorophyll *a* thresholds to predict mic
 
 #Results
 
-In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L.  Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level. For chlorophyll *a*, the range was `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L.  All lakes had reported chlorophyll *a* concentrations that exceeded detection limits.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The associations between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
+In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L.  Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level. For chlorophyll *a*, the range was `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L.  All lakes had reported chlorophyll *a* concentrations that exceeded detection limits.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The associations between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* concentrations that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
 
 ```{r epa_child_cp_plot, echo=FALSE, fig.width=6, fig.cap="",warning=FALSE,message=FALSE}
 jpeg(filename = "hollister_microcystin_fig1.jpg",
@@ -323,6 +329,21 @@ A second potential use is to identify past bloom events from historical data.  A
 
 Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR or other toxins.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous measurement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
 
+#Software and Data Availability
+Data and Latest Source Code: [https://github.com/USEPA/microcystinchla](https://github.com/USEPA/microcystinchla)
+
+Archived data and source code at time of publication: []()
+
+License: Creative Commons Zero 1.0: [http://creativecommons.org/publicdomain/zero/1.0/](http://creativecommons.org/publicdomain/zero/1.0/)
+
+#Author Contributions
+JH and BK conceived of and conducted the analysis.  Both authors reviewed the results and contributed to writing the manuscript.  
+
+#Competing Interests
+No competing interests were disclosed.
+
+#Grant Information
+The author(s) declared that no grants were involved in supporting this work.
 
 #Acknowledgements
 
