--- a/manuscript/f1000_submission/manuscript.bib
+++ b/manuscript/f1000_submission/manuscript.bib
@@ -52,7 +52,7 @@
 
 @misc{HABHRCA2014,
   title={{Harmful Algal Bloom and Hypoxia Research and Control Amendments Act of 2014. (S. 1254).}},
-  author={Harmful Algal Bloom and Hypoxia Research and Control Amendments Act},
+  author={{Harmful Algal Bloom and Hypoxia Research and Control Amendments Act}},
   year={2014},
   url={https://www.congress.gov/113/bills/s1254/BILLS-113s1254enr.pdf}
   }
