submission release for DOI minting.

--- a/manuscript/f1000_submission/f1000research.latex
+++ b/manuscript/f1000_submission/f1000research.latex
@@ -39,8 +39,8 @@ $abstract$
 \end{abstract}
 
 $if(keywords)$
-\textbf{Keywords:}
-$for(keyword)$
+\textbf{Keywords: }
+$for(keywords)$
 $keywords.keyword$;
 $endfor$
 $endif$
