--- a/manuscript/f1000_submission/manuscript.tex
+++ b/manuscript/f1000_submission/manuscript.tex
@@ -58,7 +58,12 @@ further testing and possible management action.
 
 \end{abstract}
 
-\textbf{Keywords:}
+\textbf{Keywords: }
+Harmful Algal Blooms;
+Cyanotoxins;
+National Lakes Assessment;
+Conditional Probability Analysis;
+Cyanobacteria
 
 \clearpage
 
