--- a/manuscript/f1000_submission/manuscript.tex
+++ b/manuscript/f1000_submission/manuscript.tex
@@ -63,7 +63,7 @@ Harmful Algal Blooms;
 Cyanotoxins;
 National Lakes Assessment;
 Conditional Probability Analysis;
-Cyanobacteria
+Cyanobacteria;
 
 \clearpage
 
@@ -306,7 +306,8 @@ Availability}\label{software-and-data-availability}
 Data and Latest Source Code:
 \href{https://github.com/USEPA/microcystinchla}{\url{https://github.com/USEPA/microcystinchla}}
 
-Archived data and source code at time of publication: \href{}{}
+Archived data and source code at time of publication:
+\href{http://dx.doi.org/10.5281/zenodo.45317}{\url{http://dx.doi.org/10.5281/zenodo.45317}}
 
 License: Creative Commons Zero 1.0:
 \href{http://creativecommons.org/publicdomain/zero/1.0/}{\url{http://creativecommons.org/publicdomain/zero/1.0/}}
