edits coming along

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,24 @@
+@article{wagner2011landscape,
+  title={Landscape drivers of regional variation in the relationship between total phosphorus and chlorophyll in lakes},
+  author={Wagner, Tyler and Soranno, Patricia A and Webster, Katherine E and Cheruvelil, Kendra Spence},
+  journal={Freshwater Biology},
+  volume={56},
+  number={9},
+  pages={1811--1824},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{beaver2014land,
+  title={Land use patterns, ecoregion, and microcystin relationships in US lakes and reservoirs: A preliminary evaluation},
+  author={Beaver, John R and Manis, Erin E and Loftin, Keith A and Graham, Jennifer L and Pollard, Amina I and Mitchell, Richard M},
+  journal={Harmful Algae},
+  volume={36},
+  pages={57--62},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @Manual{,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -742,6 +763,13 @@
   author={USEPA},
   year={2009},
   publisher={{Office of Water and Office of Research and Development, US Environmental Protection Agency, Washington, DC}}
+}
+
+@misc{nla_fieldops,
+  title={Survey of the Nation's Lakes Field Operations Manual {EPA841-B-07-004}},
+  author={USEPA},
+  year={2007},
+  publisher={{U.S. Environmental Protection Agency, Washington, DC.}}
 }
 
 @Misc{Altmetrics,
